--- a/views/base.ejs
+++ b/views/base.ejs
@@ -19,9 +19,12 @@
 	</div>
 
 	<style>
+	html, body {
+		height: 100%;
+		width: 100%;
+	}
 	.container {
 		width: 1200px !important;
-		background-color: #eee;
 	}
 	</style>
 </body>
