--- a/views/header.ejs
+++ b/views/header.ejs
@@ -45,18 +45,17 @@
 		line-height: 100px;
 	}
 	.bottom {
+		position: relative;
 	    margin-top: 5px;
 	    background-color: gold;
 	    height: 10%;
 	    width: 100%;
 	    opacity:0;
-	    bottom: 10px;
-	    left: 0;
-	    right: 0;
+	    bottom: 5px;
 	    transition: opacity .4s, bottom 0.5s;
 	}
 	.cntnr:hover .bottom{
-	    bottom: -15px;
+	    bottom: 25px;
 	    opacity:1;
 	}
 	.logo {
