--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,61 +1,70 @@
 <link href='http://fonts.googleapis.com/css?family=Philosopher:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <div class="logo">ИСКРА</div>
 <hr>
 <div class="tabs">
-	<div class="cntnr">
-		<div class = 'upper'><p>Фишка</p></div>
-		<div class = 'bottom'></div>
-	</div>
-	<div class="cntnr">
-		<div class = 'upper'><p>Темы</p></div>
-		<div class = 'bottom'></div>
-	</div>
-	<div class="cntnr">
-		<div class = 'upper'><p>Карусель</p></div>
-		<div class = 'bottom'></div>
-	</div>
-	<div class="cntnr">
-		<div class = 'upper'><p>О проекте</p></div>
-		<div class = 'bottom'></div>
-	</div>
+		<div class = 'upper'>
+			<span>
+				Фишка
+				<div class = 'bottom'></div>
+			</span>
+		</div>
+		
+		<div class = 'upper'>
+			<span>
+				Темы
+				<div class = 'bottom'></div>
+			</span>
+		</div>
+		
+		<div class = 'upper'>
+			<span>
+				Карусель
+				<div class = 'bottom'></div>
+			</span>
+		</div>
+		
+		<div class = 'upper'>
+			<span>
+				О проекте
+				<div class = 'bottom'></div>
+			</span>
+		</div>
 </div>
 <style>
-
 	.tabs{
 		width:100%;
-		height: 100px;
-		margin-top: 10px;
-
+		height: 50px;
+		line-height: 50px;
+		margin: 10px auto 20px;
+		font-family: 'Roboto Condensed';
+		font-size: 25px;
 	}
-	.cntnr {
+	.upper {
+	    color: black;
 	    text-align: center;
 		float: left;
 	    height: 100%;
 	    width:25%;
 	    cursor:pointer;
 	}
-	.upper {
-	    color: black;
-	    width: 100%;
-	    height: 100%;
-	    transition: .6s;
-	    z-index: 10;
-	}
-	p {
-		line-height: 100px;
+	span {
+		position: relative;
+		/*display: inline-block;*/
 	}
 	.bottom {
-		position: relative;
+		position: absolute;
+		left:0;
+		right:0;
 	    margin-top: 5px;
 	    background-color: gold;
-	    height: 10%;
-	    width: 100%;
+	    height: 5px;
 	    opacity:0;
-	    bottom: 5px;
+	    bottom: -15px;
 	    transition: opacity .4s, bottom 0.5s;
 	}
-	.cntnr:hover .bottom{
-	    bottom: 25px;
+	.upper:hover .bottom{
+	    bottom: -3px;
 	    opacity:1;
 	}
 	.logo {
