--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,6 @@
 <%- layout('base.ejs') %>
 <% block('title', 'Главная страница') -%>
 <script src="/javascripts/index_page.js"></script>
-
 <div ng-controller="Index">	
 	<div class="feed">
 		<div ng-repeat="block in feed_blocks"
@@ -9,18 +8,18 @@
 			<div ng-repeat="element in block.feed_elements"
 				 ng-class="{ s11 : element.size == 1, s21 : element.size == 2 , s22 : element.size == 4}">
 				 <div class="inner_container">
-					<!-- <span>{{ element.size }}</span> -->
+				 	<div class="img"></div>
+				 	<div class="description"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi voluptatum sed blanditiis, tempora odio eos eveniet omnis accusamus, assumenda praesentium debitis quaerat neque harum similique sint. Inventore ratione quisquam, nisi?</p></div>
 				 </div>
 			</div>
 			<hr>
 		</div>
-
 	</div>
 </div>
-
-
 <style>
 	div.block {
+		position: relative;
+		z-index: 1;
 		width: 50%;
 		float: left;
 		margin-bottom: 10px;
@@ -44,16 +43,36 @@
 		height: 400px;
 	}
 	div.inner_container {
-		background-color: #ddd;
+		position: relative;
 		width: 100%;
 		height: 100%;
-	}
-	div[class*=col] {
-		height: 200px;
-		padding: 5px;
-	}
-	div[class*=col] > div {
 		background-color: lightblue;
+		overflow: hidden;
+	}
+	div.img {
+		position: absolute;
+		right:0;
+		background: url(http://www.extremetech.com/wp-content/uploads/2014/07/cassini-1.jpg) no-repeat center center;
+		background-size: cover;
 		height: 100%;
+		width: 100%;
+	}
+	div.description {
+		z-index:0;
+		position: absolute;
+		top: 0;
+		-webkit-transform: translateX(-100%);
+		   -moz-transform: translateX(-100%);
+		        transform: translateX(-100%);
+		height: 100%;
+		width: 50%;
+		opacity:1;
+		background-color: white;
+		transition:.4s;
+	}
+	div.inner_container:hover .description{
+		-webkit-transform: translateX(0);
+		   -moz-transform: translateX(0);
+		        transform: translateX(0);
 	}
 </style>
