--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,7 +2,7 @@
 <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <script>
 	$(document).ready(function() {
-		colors = ['#2F5A99','#2A8C66','#B94788','#CE5251','#14B8DE'];
+		colors = ['#2F5A99','#2A8C66','#B94788','#CE5251','#21C7C2'];
 		random_color = colors[~~(Math.random() * colors.length)]
 		$('.logo').css('color', random_color)
 		$('.bottom').css('background-color', random_color)
