--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,11 +8,16 @@
 			<div ng-repeat="element in block.feed_elements"
 				 ng-class="{ s11 : element.size == 1, s21 : element.size == 2 , s22 : element.size == 4}">
 				 <div class="inner_container">
-				 	<div class="img"></div>
-				 	<div class="description"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi voluptatum sed blanditiis, tempora odio eos eveniet omnis accusamus, assumenda praesentium debitis quaerat neque harum similique sint. Inventore ratione quisquam, nisi?</p></div>
+				 	<div class="img">
+				 		<div class='news_title'>
+					 		<p>Title title title</p>
+				 		</div>
+				 	</div>
+				 	<div class="description">
+				 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi voluptatum sed blanditiis, tempora odio eos eveniet omnis accusamus, assumenda praesentium debitis quaerat neque harum similique sint. Inventore ratione quisquam, nisi?</p>
+				 	</div>
 				 </div>
 			</div>
-			<hr>
 		</div>
 	</div>
 </div>
@@ -50,7 +55,6 @@
 		overflow: hidden;
 	}
 	div.img {
-		position: absolute;
 		right:0;
 		background: url(http://www.extremetech.com/wp-content/uploads/2014/07/cassini-1.jpg) no-repeat center center;
 		background-size: cover;
@@ -58,21 +62,62 @@
 		width: 100%;
 	}
 	div.description {
-		z-index:0;
 		position: absolute;
+		z-index:1;
+		display: table;
+		height:100%;
 		top: 0;
-		-webkit-transform: translateX(-100%);
-		   -moz-transform: translateX(-100%);
-		        transform: translateX(-100%);
-		height: 100%;
-		width: 50%;
-		opacity:1;
-		background-color: white;
-		transition:.4s;
+		width:100%;
+		-webkit-transform:translateX(-100%);
+   			-moz-transform:translateX(-100%);
+        		transform: translateX(-100%);
+		-webkit-transition: all .4s linear;
+		   -moz-transition: all .4s linear;
+		        transition: all .4s linear;
 	}
-	div.inner_container:hover .description{
-		-webkit-transform: translateX(0);
-		   -moz-transform: translateX(0);
-		        transform: translateX(0);
+	div.s11 .inner_container .description p, 
+	div.s22 .inner_container .description p {
+		position: absolute;
+		bottom:0;
+		left: 0;
+		right: 0;
+		margin: 0;
+		background-color: white;
+	}
+	div.news_title {
+		display: table;
+		height: 100%;
+	}
+	div.news_title p {
+		display: table-cell;
+		text-align: center;
+		vertical-align: middle;
+		font-size: 20px;
+		color: #21C7C2;
+	}
+	div.s21 .inner_container .description {
+		max-width:30%;
+		background-color: white;
+		display: table;
+	}
+	div.s21 .inner_container .description .p{
+		display: table-cell;
+		vertical-align: middle;
+		text-align: center;
+	}
+	div.s11 .inner_container:hover .description{
+		-webkit-transform:translateX(0);
+   			-moz-transform:translateX(0);
+        		transform: translateX(0);
+	}
+	div.s22 .inner_container:hover .description{
+		-webkit-transform:translateX(0);
+   			-moz-transform:translateX(0);
+        		transform: translateX(0);
+	}
+	div.s21 .inner_container:hover .description{
+		-webkit-transform:translateX(0);
+   			-moz-transform:translateX(0);
+        		transform: translateX(0);
 	}
 </style>
