--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 				 <div class="inner_container">
 				 	<div class="img">
 				 		<div class='news_title'>
-					 		<p>Title title title</p>
+					 		<p>Lorem ipsum dolor sit amet</p>
 				 		</div>
 				 	</div>
 				 	<div class="description">
@@ -104,7 +104,7 @@
 		display: table-cell;
 		text-align: center;
 		vertical-align: middle;
-		font-size: 20px;
+		font-size: 26px;
 		color: #21C7C2;
 	}
 	div.s21 .inner_container .description {
