--- a/views/index.ejs
+++ b/views/index.ejs
@@ -97,6 +97,11 @@
 			-moz-transition: all .4s; 
 		    	transition: all .4s;
 	}
+	.s21 .inner_container .img .news_title{
+		margin: 0;
+		float: right;
+		width: 100%;
+	}
 	.s22 .inner_container .img .news_title{
 		height: 380px;
 	}
