--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,7 +93,8 @@
 	}
 	div.news_title {
 		display: table;
-		height: 180px;
+		height: 100%;
+		width: 100%;
 	}
 	.s21 .inner_container .img .news_title{
 		margin: 0;
@@ -101,12 +102,12 @@
 		width: 100%;
 	}
 	.s22 .inner_container .img .news_title{
-		height: 380px;
 	}
 	div.news_title p {
 		display: table-cell;
 		text-align: center;
 		vertical-align: middle;
+		padding: 20px;
 		font-size: 26px;
 		color: #21C7C2;
 	}
@@ -128,9 +129,9 @@
         		transform: translateX(0);
 	}
 	.transitioner {
-		-webkit-transition: .4s;
-		-moz-transition: .4s;
-		transition: .4s;
+		-webkit-transition: all .4s;
+		-moz-transition: all .4s;
+		transition: all .4s;
 		
 	}
 </style>
