--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <%- layout('base.ejs') %>
 <% block('title', 'Главная страница') -%>
+<script src="/javascripts/utils.js"></script>
 <script src="/javascripts/index_page.js"></script>
 <div ng-controller="Index" ng-init="init()">	
 
