Добавление index.ejs

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,5 +1,6 @@
 <%- layout('base.ejs')%>
 <script src="/javascripts/utils.js"></script>
+<link rel="stylesheet" href="/stylesheets/index.css">
 
 <div ng-controller="Admin">
 
