--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -23,6 +23,9 @@ div.s22 {
 	width: 100%;
 	height: 400px;
 }
+
+
+
 p {
 	margin: 0;
 	display: table-cell;
@@ -45,17 +48,55 @@ div.img {
 }
 div.description {
 	position: absolute;
-	z-index:1;
 	display: table;
 	height:100%;
 	top: 0;
 	width:100%;
 	-webkit-transform: translateX(-100%);
-			-moz-transform: translateX(-100%);
-    		transform: translateX(-100%);
+	-moz-transform: translateX(-100%);
+    transform: translateX(-100%);
 	-webkit-transition: all .4s linear;
-	    -moz-transition: all .4s linear;
-	        transition: all .4s linear;
+	-moz-transition: all .4s linear;
+	transition: all .4s linear;
+}
+.inner_container:hover .description{
+	-webkit-transform: translateX(0);
+	-moz-transform: translateX(0);
+    transform: translateX(0);
+}
+div.news_title { 
+	display: table;
+	height: 100%;
+	width: 100%;
+}
+div.news_title p {
+	display: table-cell;
+	text-align: center;
+	vertical-align: middle;
+	padding: 20px;
+	font-size: 26px;
+	color: #21C7C2;
+	-webkit-transition: all .4s;
+	-moz-transition: all .4s;
+	transition: all .4s;
+}
+
+div.s11 .inner_container .description p{
+	max-height: 60px;
+}
+div.s11 .inner_container .img .news_title {
+	-webkit-transform: translateY(0);
+	-moz-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-transition: all .4s;
+	-moz-transition: all .4s;
+	transition: all .4s;
+
+}
+div.s11 .inner_container:hover .img .news_title {
+	-webkit-transform: translateY(-45px);
+	-moz-transform: translateY(-45px);
+    transform: translateY(-45px);
 }
 div.s11 .inner_container .description p, 
 div.s22 .inner_container .description p {
@@ -66,46 +107,41 @@ div.s22 .inner_container .description p {
 	margin: 0;
 	background-color: white;
 }
-div.news_title {
-	display: table;
-	height: 100%;
-	width: 100%;
-}
-.s21 .inner_container .img .news_title{
-	margin: 0;
-	float: right;
-	width: 100%;
-}
-.s22 .inner_container .img .news_title{
-}
-div.news_title p {
-	display: table-cell;
-	text-align: center;
-	vertical-align: middle;
-	padding: 20px;
-	font-size: 26px;
-	color: #21C7C2;
-}
 div.s21 .inner_container .description {
 	height: 100%;
 	max-width:30%;
 	background-color: white;
 	display: table;
 }
-div.s21 .inner_container .description p{
+.s21 .inner_container .img .news_title{
+	margin: 0;
+	float: right;
+	width: 100%;
+}
+div.s21 .inner_container:hover .img .news_title p {
+	padding-left: 195px;
+	padding-right: 20px;	
+}
+div.s21 .inner_container .description p {
 	display: table-cell;
 	vertical-align: middle;
 	text-align: center;
-	position: absolute;
+	padding: 5px;
 }
-.inner_container:hover .description{
-	-webkit-transform: translateX(0);
-			-moz-transform: translateX(0);
-    		transform: translateX(0);
+div.s22 .inner_container .description p {
+	max-height: 190px;
 }
-.transitioner {
-	-webkit-transition: all .4s;
+div.s22 .inner_container .img .news_title {
+	-webkit-transform: translateY(0);
+	-moz-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-transition: all .4s;
 	-moz-transition: all .4s;
 	transition: all .4s;
-	
 }
+div.s22 .inner_container:hover .img .news_title {
+	-webkit-transform: translateY(-100px);
+	-moz-transform: translateY(-100px);
+    transform: translateY(-100px);
+
+};
