--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,148 +1,171 @@
-div.block {
-	position: relative;
-	z-index: 1;
-	width: 50%;
-	float: left;
-	margin-bottom: 10px;
-	height: 400px;
-}
-div.s11, div.s21, div.s22 {
-	padding: 10px;
-	float: left;
-}
-div.s11, div.s21 {
-	height: 200px;
-}
-div.s11 {
-	width: 50%;
-}
-div.s21 {
-	width: 100%;
-}
-div.s22 {
-	width: 100%;
-	height: 400px;
-}
-
-
-
-p {
-	margin: 0;
-	display: table-cell;
-	vertical-align: middle;
-	text-align: center;
-}
-div.inner_container {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	background-color: lightblue;
-	overflow: hidden;
-}
-div.img {
-	width: 100%;
-	height: 100%;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-	right: 0;
-}
-div.description {
-	position: absolute;
-	display: table;
-	height:100%;
-	top: 0;
-	width:100%;
-	-webkit-transform: translateX(-100%);
-	-moz-transform: translateX(-100%);
-    transform: translateX(-100%);
-	-webkit-transition: all .4s linear;
-	-moz-transition: all .4s linear;
-	transition: all .4s linear;
-}
-.inner_container:hover .description{
-	-webkit-transform: translateX(0);
-	-moz-transform: translateX(0);
-    transform: translateX(0);
-}
-div.news_title { 
-	display: table;
-	height: 100%;
-	width: 100%;
-}
-div.news_title p {
-	display: table-cell;
-	text-align: center;
-	vertical-align: middle;
-	padding: 20px;
-	font-size: 26px;
-	color: #21C7C2;
-	-webkit-transition: all .4s;
-	-moz-transition: all .4s;
-	transition: all .4s;
+/*blocks positioning*/
+	div.block {
+		position: relative;
+		z-index: 1;
+		width: 50%;
+		float: left;
+		margin-bottom: 10px;
+		height: 400px;
+	}
+	div.s11, div.s21, div.s22 {
+		padding: 10px;
+		float: left;
+	}
+	div.s11, div.s21 {
+		height: 200px;
+	}
+	div.s11 {
+		width: 50%;
+	}
+	div.s21 {
+		width: 100%;
+	}
+	div.s22 {
+		width: 100%;
+		height: 400px;
 }
 
-div.s11 .inner_container .description p{
-	max-height: 60px;
-}
-div.s11 .inner_container .img .news_title {
-	-webkit-transform: translateY(0);
-	-moz-transform: translateY(0);
-    transform: translateY(0);
-    -webkit-transition: all .4s;
-	-moz-transition: all .4s;
-	transition: all .4s;
+/*blocks content positioning styling and animation*/
+	p {
+		margin: 0;
+		text-align: center;
+	}
+	div.inner_container {
+		position: relative;
+		width: 100%;
+		height: 100%;
+		background-color: lightblue;
+		overflow: hidden;
+	}
+	div.img {
+		width: 100%;
+		height: 100%;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center center;
+		right: 0;
+	}
 
-}
-div.s11 .inner_container:hover .img .news_title {
-	-webkit-transform: translateY(-45px);
-	-moz-transform: translateY(-45px);
-    transform: translateY(-45px);
-}
-div.s11 .inner_container .description p, 
-div.s22 .inner_container .description p {
-	position: absolute;
-	bottom:0;
-	left: 0;
-	right: 0;
-	margin: 0;
-	background-color: white;
-}
-div.s21 .inner_container .description {
-	height: 100%;
-	max-width:30%;
-	background-color: white;
-	display: table;
-}
-.s21 .inner_container .img .news_title{
-	margin: 0;
-	float: right;
-	width: 100%;
-}
-div.s21 .inner_container:hover .img .news_title p {
-	padding-left: 195px;
-	padding-right: 20px;	
-}
-div.s21 .inner_container .description p {
-	display: table-cell;
-	vertical-align: middle;
-	text-align: center;
-	padding: 5px;
-}
-div.s22 .inner_container .description p {
-	max-height: 190px;
-}
-div.s22 .inner_container .img .news_title {
-	-webkit-transform: translateY(0);
-	-moz-transform: translateY(0);
-    transform: translateY(0);
-    -webkit-transition: all .4s;
-	-moz-transition: all .4s;
-	transition: all .4s;
-}
-div.s22 .inner_container:hover .img .news_title {
-	-webkit-transform: translateY(-100px);
-	-moz-transform: translateY(-100px);
-    transform: translateY(-100px);
+	/*description styles and animation*/
+		div.description {
+			position: absolute;
+			display: table;
+			height:100%;
+			top: 0;
+			width:100%;
 
-};
+			-webkit-transform: translateX(-100%);
+			-moz-transform: translateX(-100%);
+		    transform: translateX(-100%);
+
+		    -webkit-transition: all .4s 0s; /*transition-delay on mouseleave*/
+			-moz-transition: all .4s 0s; /*transition-delay on mouseleave*/
+			transition: all .4s 0s; /*transition-delay on mouseleave*/
+		}
+		div.inner_container:hover .description{
+			-webkit-transform: translateX(0); 
+			-moz-transform: translateX(0); 
+		    transform: translateX(0); 
+
+			-webkit-transition: all .4s .5s; /*transition-delay on mouseenter*/
+			-moz-transition: all .4s .5s; /*transition-delay on mouseenter*/
+			transition: all .4s .5s; /*transition-delay on mouseenter*/
+		}
+		div.s11 .inner_container .description p{
+			max-height: 60px;
+		}
+		div.s11 .inner_container .description p, 
+		div.s22 .inner_container .description p {
+			position: absolute;
+			bottom:0;
+			left: 0;
+			right: 0;
+			margin: 0;
+			background-color: white;
+		}
+		div.s21 .inner_container .description {
+			height: 100%;
+			max-width:30%;
+			background-color: white;
+			display: table;
+		}
+		div.s21 .inner_container .description p {
+			display: table-cell;
+			vertical-align: middle;
+			padding: 5px;
+			
+			-webkit-transition: all .4s 0s;
+			-moz-transition: all .4s 0s;
+			transition: all .4s 0s;
+
+		}
+		div.s22 .inner_container .description p {
+			max-height: 190px;
+		}
+
+	/*title styles and animation*/
+		div.news_title { 
+			display: table;
+			height: 100%;
+			width: 100%;
+		}
+		div.news_title p {
+			display: table-cell;
+			text-align: center;
+			vertical-align: middle;
+			padding: 20px;
+			font-size: 26px;
+			color: #21C7C2;
+
+			-webkit-transition: all .4s;
+			-moz-transition: all .4s;
+			transition: all .4s;
+		}
+		div.s11 .inner_container .img .news_title {
+			-webkit-transform: translateY(0);
+			-moz-transform: translateY(0);
+		    transform: translateY(0);
+
+		    -webkit-transition: all .4s .5s;
+			-moz-transition: all .4s .5s;
+			transition: all .4s .5s;
+		}
+		div.s11 .inner_container:hover .img .news_title {
+			-webkit-transform: translateY(-45px);
+			-moz-transform: translateY(-45px);
+		    transform: translateY(-45px);
+		
+		    -webkit-transition: all .4s 0s;
+			-moz-transition: all .4s 0s;
+			transition: all .4s 0s;
+		}
+		div.s21 .inner_container .img .news_title{
+			margin: 0;
+			float: right;
+			width: 100%;
+
+		}
+		div.s21 .inner_container .img .news_title p {
+			padding:5px;
+			-webkit-transition: all .4s .5s;
+			-moz-transition: all .4s .5s;
+			transition: all .4s .5s;
+		}
+		div.s21 .inner_container:hover .img .news_title p {
+			padding-left: 195px;
+			padding-right: 20px;	
+
+			-webkit-transition: all .4s 0s;
+			-moz-transition: all .4s 0s;
+			transition: all .4s 0s;
+		}
+		div.s22 .inner_container .img .news_title {
+			-webkit-transform: translateY(0);
+			-moz-transform: translateY(0);
+		    transform: translateY(0);
+		}
+		div.s22 .inner_container:hover .img .news_title {
+			-webkit-transform: translateY(-100px);
+			-moz-transform: translateY(-100px);
+		    transform: translateY(-100px);
+		};
