--- a/views/base.ejs
+++ b/views/base.ejs
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.css"></link>
 </head>
 <body ng-app="science">
-	<div class="container">
+	<div class="container">	
 		
 	<%- partial('header') %>	
 	<%- body %>
@@ -22,9 +22,12 @@
 	html, body {
 		height: 100%;
 		width: 100%;
+		background: #e2e2e2;
 	}
 	.container {
 		width: 1200px !important;
+		background: #f5f5f5;
+		box-shadow: 0px 2px 2px rgba(0,0,0,.5);
 	}
 	</style>
 </body>
