--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -25,6 +25,8 @@
 			<input type="number" ng-model="news.size">
 			<p>Image</p>
 			<input type="text" ng-model="news.image">
+			<p>Tags</p>
+			<input type="text" ng-model="news.tags">
 			<button ng-click="saveNews(news)">Сохранить</button>
 		</div>
 		<div class="output">
