--- a/views/base.ejs
+++ b/views/base.ejs
@@ -29,6 +29,9 @@
 		background: #f5f5f5;
 		box-shadow: 0px 2px 2px rgba(0,0,0,.5);
 	}
+	*[ng-click] {
+		cursor: pointer;
+	}
 	</style>
 </body>
 </html>
