--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -5,6 +5,7 @@
 <script src="/javascripts/admin.js"></script>
 <script src="/javascripts/directives/news_element.js"></script>
 <link rel="stylesheet" href="/stylesheets/index.css">
+<link rel="stylesheet" href="/libs/fontawesome/css/font-awesome.min.css">
 
 <div class="admin-page" ng-app="admin" ng-controller="Admin">
 
