Изменена страница списка новостей

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -173,19 +173,22 @@
 	}
 	.news-in-list {
 		border: 1px solid #ddd;
-		background-color: snow;
+		background-color: #ffd;
 		padding: 5px;
 	}
 	.news-block {
-		background-color: #ffd;
+		padding: 5px;
+		text-align: center;
+		float:left;
+		width: 50%;
+		height: 70px;
 	}
 	.news-main {
-		
 	}
 	.news-description {
 		
 	}
 	.button-block {
-
+		display: inline-block
 	}
 </style>
