--- a/public/stylesheets/content.css
+++ b/public/stylesheets/content.css
@@ -7,7 +7,7 @@ div.page {
 }
 div.page > div {
 	float: left;
-	height: 100vh;
+	/*height: 100vh;*/
 }
 div.page .post {
 	width: 50%;
@@ -15,6 +15,13 @@ div.page .post {
 }
 div.page .list, div.page .misc {
 	width: 25%;
+}
+div.page .misc {
+	padding: 0 10px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	
 }
 .list {
 	background-color: #e9e9e9;
@@ -67,4 +74,7 @@ div.page .list, div.page .misc {
 	line-height: 18px;
 	padding-top: 5px;
 	font-weight: 400;
+}
+#vk_groups {
+	width: 100%;
 }
