--- a/public/stylesheets/content.css
+++ b/public/stylesheets/content.css
@@ -26,6 +26,9 @@ div.page .misc {
 .list {
 	background-color: #e9e9e9;
 }
+.list a {
+	text-decoration: none;
+}
 .post .title {
 	font-weight: 700;
 	font-size: 30px;
