--- a/views/base.ejs
+++ b/views/base.ejs
@@ -13,13 +13,24 @@
 			}])
 	</script>
 
-	 <meta property="og:title" content="Заголовок" />
-      <meta property="og:description" content="Описание" />
-      <meta property="og:url" content="Ссылка на страницу" />
-      <meta property="og:image" content="Ссылка на картинку" />
+	<meta property="og:title" content="Заголовок" />
+    <meta property="og:description" content="Описание" />
+    <meta property="og:url" content="Ссылка на страницу" />
+    <meta property="og:image" content="Ссылка на картинку" />
+    <meta property="og:type" content="article" /> 
 
-      <meta name="title" content="Заголовок" />
-      <meta name="description" content="Описание" />
+    <meta name="title" content="Article title" />
+	<meta name="description" content="Article description.This is a very interesting article." />
+	<link rel="image_src" href="http://mysite.com/mypic.jpg" />
+
+	
+	<meta name="twitter:card" content="summary_large_image"> 
+	<meta name="twitter:site" content="@publisher_handle"> 
+	<meta name="twitter:title" content="Page Title"> 
+	<meta name="twitter:description" content="Page description less than 200 characters"> 
+	<meta name="twitter:creator" content="@author_handle"> 
+	<!-- Twitter summary card with large image must be at least 280x150px --> 
+	<meta name="twitter:image:src" content=" http://www.example.com/image.html">
 
 </head>
 <body>
