--- a/views/base.ejs
+++ b/views/base.ejs
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
-	<meta charset="UTF-8">
 	<title><%- blocks.title %></title>
+	
+	<meta charset="UTF-8">
+	<meta http-equiv="cache-control" content="max-age=0" />
+	<meta http-equiv="cache-control" content="no-cache" />
+	<meta http-equiv="expires" content="0" />
+	<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+	<meta http-equiv="pragma" content="no-cache" />
+	
 	<script src="/libs/angular/angular.min.js"></script>
 	<script src="/libs/angular-route/angular-route.min.js"></script>
 	<script src="/libs/jquery/dist/jquery.min.js"></script>
@@ -12,6 +19,7 @@
 			.controller('baseCtrl', [ '$scope', function($scope) {
 			}])
 	</script>
+
 
 	<meta property="og:title" content="Заголовок" />
     <meta property="og:description" content="Описание" />
